Multi-board: guards for HID, add envs (S2,S3,ESP32, C3), and README support matrix

--- a/platformio.ini
+++ b/platformio.ini
@@ -13,6 +13,7 @@ build_flags =
     -DARDUINO_USB_MODE=1
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
 
 ; Third-party libraries
 lib_deps = 
@@ -35,7 +36,34 @@ build_flags =
     -DARDUINO_USB_CDC_ON_BOOT=1
     -DARDUINO_USB_DFU_ON_BOOT=0
     -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
 
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; Generic ESP32 (no native USB) - builds without HID
+[env:esp32dev]
+platform = espressif32
+board = esp32dev
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=0
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; ESP32-C3 DevKit (no native USB HID) - builds without HID
+[env:esp32-c3-devkitm-1]
+platform = espressif32
+board = esp32-c3-devkitm-1
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=0
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
     links2004/WebSockets@^2.4.0
