Multi-board: Add 15 ESP32 boards + GitHub Actions CI + detailed docs
- Add Flipper ESP32-S2 as primary test board
- Add ESP32-S2 variants: Saola-1, DevKitM-1, Adafruit Feather, UM FeatherS2
- Add ESP32-S3 variants: DevKitC-1, N8R8, Adafruit Feather, TinyS3, LilyGo T-Display-S3
- Add ESP32-C3 variants: DevKitM-1, DevKitC-02, Seeed XIAO
- Add ESP32-C6 DevKitC-1
- Add ESP32 Classic (esp32dev) support

- GitHub Actions workflow builds all 18 board environments on every push/PR
- README updated with comprehensive board support matrix (with build badges)
- New BOARDS.md with detailed docs for each board
- All boards organized by chip family and USB HID capability

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,7 +20,32 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     links2004/WebSockets@^2.4.0
 
-; Alternative environment for ESP32-S2
+; ========================================
+; ESP32-S2 Boards (Native USB HID Support)
+; ========================================
+
+; Flipper Zero WiFi Dev Board (ESP32-S2)
+[env:esp32-s2-flipper]
+platform = espressif32
+board = esp32-s2-saola-1  ; Use Saola board profile for Flipper
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+upload_protocol = esptool
+upload_flags = 
+    --chip=esp32s2
+    --before=no_reset
+    --after=hard_reset
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_DFU_ON_BOOT=0
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; ESP32-S2 Saola-1 Dev Board
 [env:esp32-s2-saola-1]
 platform = espressif32
 board = esp32-s2-saola-1
@@ -37,12 +62,140 @@ build_flags =
     -DARDUINO_USB_DFU_ON_BOOT=0
     -DESP32_MCP_SERVER
     -DHAVE_NATIVE_USB=1
-
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
     links2004/WebSockets@^2.4.0
 
-; Generic ESP32 (no native USB) - builds without HID
+; ESP32-S2 DevKitM-1
+[env:esp32-s2-devkitm-1]
+platform = espressif32
+board = esp32-s2-devkitm-1
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+upload_protocol = esptool
+upload_flags = 
+    --chip=esp32s2
+    --before=no_reset
+    --after=hard_reset
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_DFU_ON_BOOT=0
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; Adafruit ESP32-S2 Feather
+[env:adafruit_feather_esp32s2]
+platform = espressif32
+board = adafruit_feather_esp32s2
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_DFU_ON_BOOT=0
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; Unexpected Maker FeatherS2
+[env:um_feathers2]
+platform = espressif32
+board = um_feathers2
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DARDUINO_USB_DFU_ON_BOOT=0
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; ========================================
+; ESP32-S3 Boards (Native USB HID Support)
+; ========================================
+
+; ESP32-S3 DevKitC-1 with 8MB Flash + 8MB PSRAM
+[env:esp32-s3-devkitc-1-n8r8]
+platform = espressif32
+board = esp32-s3-devkitc-1
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+upload_flags = 
+    --before=no_reset
+    --after=hard_reset
+build_flags = 
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+    -DBOARD_HAS_PSRAM
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; Adafruit ESP32-S3 Feather
+[env:adafruit_feather_esp32s3]
+platform = espressif32
+board = adafruit_feather_esp32s3
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; Unexpected Maker TinyS3
+[env:um_tinys3]
+platform = espressif32
+board = um_tinys3
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; LilyGo T-Display-S3
+[env:lilygo-t-display-s3]
+platform = espressif32
+board = lilygo-t-display-s3
+framework = arduino
+monitor_speed = 115200
+upload_speed = 115200
+build_flags = 
+    -DARDUINO_USB_MODE=1
+    -DARDUINO_USB_CDC_ON_BOOT=1
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=1
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; ========================================
+; ESP32 Classic (No Native USB HID)
+; ========================================
+
+; Generic ESP32 (WROOM-32) - builds without HID
 [env:esp32dev]
 platform = espressif32
 board = esp32dev
@@ -55,10 +208,57 @@ lib_deps =
     bblanchon/ArduinoJson@^6.21.3
     links2004/WebSockets@^2.4.0
 
-; ESP32-C3 DevKit (no native USB HID) - builds without HID
+; ========================================
+; ESP32-C3 Boards (No Native USB HID)
+; ========================================
+
+; ESP32-C3 DevKitM-1
 [env:esp32-c3-devkitm-1]
 platform = espressif32
 board = esp32-c3-devkitm-1
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=0
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; ESP32-C3 DevKitC-02
+[env:esp32-c3-devkitc-02]
+platform = espressif32
+board = esp32-c3-devkitc-02
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=0
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; Seeed XIAO ESP32-C3
+[env:seeed_xiao_esp32c3]
+platform = espressif32
+board = seeed_xiao_esp32c3
+framework = arduino
+monitor_speed = 115200
+build_flags = 
+    -DESP32_MCP_SERVER
+    -DHAVE_NATIVE_USB=0
+lib_deps = 
+    bblanchon/ArduinoJson@^6.21.3
+    links2004/WebSockets@^2.4.0
+
+; ========================================
+; ESP32-C6 Boards (No Native USB HID)
+; ========================================
+
+; ESP32-C6 DevKitC-1
+[env:esp32-c6-devkitc-1]
+platform = espressif32
+board = esp32-c6-devkitc-1
 framework = arduino
 monitor_speed = 115200
 build_flags = 
