Feature: Add 6 major enhancements - BLE HID, OTA, Web UI, Gamepad, Macros, Layouts
✅ BLE HID Support (non-USB boards)
- Full BLE keyboard and mouse emulation for ESP32 Classic, C3, C6
- Conditional compilation with HAVE_NATIVE_USB guards
- Compatible with ESP32-BLE-Keyboard and ESP32-BLE-Mouse libraries

✅ OTA Firmware Updates
- ArduinoOTA integration for over-the-air updates
- Password protection support
- Progress tracking and error handling
- mDNS hostname: psai-ducky.local

✅ Web-Based Configuration UI
- Beautiful gradient UI with responsive design
- Dashboard with system status, network info, HID status
- WiFi configuration with network scanner
- OTA update management
- Macro management (placeholder)
- Keyboard layout selection
- REST API endpoints for system control

✅ HID Gamepad/Joystick Emulation
- USB HID gamepad controller for S2/S3 boards
- 16 buttons + D-pad + dual analog sticks + triggers
- Full HID report descriptor for gamepad class
- Stub implementation for non-USB boards

✅ Macro Recording & Playback
- Record keyboard/mouse sequences with timestamps
- Save/load macros to/from SPIFFS as JSON
- Playback with loop support
- Import/export macro files
- Web UI integration ready

✅ Multi-Language Keyboard Layouts
- Support for 10 keyboard layouts: US, UK, DE, FR, ES, IT, PT, SE, NO, DK
- Character-to-scancode mapping for each layout
- QWERTY, QWERTZ, AZERTY support
- Runtime layout switching
- Handles accented characters (ä, ö, ü, é, ñ, etc.)

Library dependencies added to platformio.ini:
- ESP32-BLE-Keyboard
- ESP32-BLE-Mouse
- ESP Async WebServer

All features integrated into main.cpp with proper initialization.
Conditional compilation ensures compatibility across all board types.

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,6 +19,9 @@ build_flags =
 lib_deps = 
     bblanchon/ArduinoJson@^6.21.3
     links2004/WebSockets@^2.4.0
+    https://github.com/T-vK/ESP32-BLE-Keyboard.git
+    https://github.com/T-vK/ESP32-BLE-Mouse.git
+    ESP Async WebServer@^1.2.3
 
 ; ========================================
 ; ESP32-S2 Boards (Native USB HID Support)
